src/test/ui/repr/issue-83921-pretty.normal.stderr
error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/issue-83921-pretty.rs:10:8
   |
LL | #[repr("C")]
   |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0565`.
